--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -24,7 +24,7 @@
   <h2 class = "ranking_title">閲覧数ランキング</h2>
   <% @view_ranks.each.with_index(1) do |view, i| %>
     <div class = "ranking">
-      <div class="row impression_ranking">
+      <div class="row">
         <div class="col-md-4">
           <p class="ranks"><%= "#{i}位" %></p>
           <div class="card">
