--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,7 +1,6 @@
 <div class = "container">
   <%# app/assets/images %>
   <%= image_tag 'cheers.jpg', class: 'bg-image' %>
-  <div>
   <h2 class = "ranking_title">お気に入りランキング</h2>
 	<% @favorite_ranks.each.with_index(1) do |favorite, i| %>
     <div class = "ranking">
@@ -20,25 +19,26 @@
       </div>
     </div>
   <% end %>
-  </div>
-  <h2 class = "ranking_title">閲覧数ランキング</h2>
-  <% @view_ranks.each.with_index(1) do |view, i| %>
-    <div class = "ranking">
-      <div class="row">
-        <div class="col-md-4">
-          <p class="ranks"><%= "#{i}位" %></p>
-          <div class="card">
-            <%= link_to song_path(view.id) do %>
-              <%= image_tag view.image.to_s, size: '280x180' %>
-              <div class="card-body">
-                <h4 class="card-title"><%= view.name %></h4>
-              </div>
-            <% end %>
+  <div class="row">
+    <h2 class = "ranking_title">閲覧数ランキング</h2>
+    <% @view_ranks.each.with_index(1) do |view, i| %>
+      <div class = "ranking">
+        <div class="row">
+          <div class="col-md-4">
+            <p class="ranks"><%= "#{i}位" %></p>
+            <div class="card">
+              <%= link_to song_path(view.id) do %>
+                <%= image_tag view.image.to_s, size: '280x180' %>
+                <div class="card-body">
+                  <h4 class="card-title"><%= view.name %></h4>
+                </div>
+              <% end %>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  <% end %>
+    <% end %>
+  </div>
 	<h2>曲一覧</h2>
   <div class = "infinite_song">
 	  <% @songs.each do |song| %>
@@ -48,8 +48,8 @@
          		<%= image_tag song.image, size: '200x120' %>
          	</div>
          	<div class="col-md-9 name_index">
-	  	 			<strong><p class = "index_song"><%= song.name %></p></br></strong>
-	  	 			<p><%= song.artist %><p></br>
+	  	 			<p class = "index_song"><strong><%= song.name %></strong></p><br>
+	  	 			<p><%= song.artist %><p><br>
 	  	 			<div class = "description_field">
 	  	 				<p><%= song.description %></p>
 	  	 			</div>
