--- a/app/assets/stylesheets/songs.scss
+++ b/app/assets/stylesheets/songs.scss
@@ -48,9 +48,9 @@ nav.pagination {
 
 .ranking{
   display: inline-block;
-  margin:20px;
   vertical-align: top;
   max-width:350px;
+  margin-top:20px;
 }
 
 .card {
