--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -4,17 +4,15 @@
   <div class="row favorite_row">
     <h2 class = "ranking_title">お気に入りランキング</h2>
 	  <% @favorite_ranks.each.with_index(1) do |favorite, i| %>
-      <div class = "ranking">
-        <div class="col-md-4">
-          <p class="ranks"><%= "#{i}位" %></p>
-          <div class="card">
-            <%= link_to song_path(favorite.id) do %>
+      <div class = "col-md-4 ranking">
+        <p class="ranks"><%= "#{i}位" %></p>
+        <div class="card">
+          <%= link_to song_path(favorite.id) do %>
             <%= image_tag favorite.image.to_s, size: '280x180' %>
-              <div class="card-body">
-                <h4 class="card-title"><%= favorite.name %></h4>
-              </div>
-            <% end %>
-          </div>
+            <div class="card-body">
+              <h4 class="card-title"><%= favorite.name %></h4>
+            </div>
+          <% end %>
         </div>
       </div>
     <% end %>
@@ -22,17 +20,15 @@
   <div class="row">
     <h2 class = "ranking_title">閲覧数ランキング</h2>
     <% @view_ranks.each.with_index(1) do |view, i| %>
-      <div class = "ranking">
-        <div class="col-md-4">
-          <p class="ranks"><%= "#{i}位" %></p>
-          <div class="card">
-            <%= link_to song_path(view.id) do %>
-              <%= image_tag view.image.to_s, size: '280x180' %>
-              <div class="card-body">
-                <h4 class="card-title"><%= view.name %></h4>
-              </div>
-            <% end %>
-          </div>
+      <div class = "col-md-4 ranking">
+        <p class="ranks"><%= "#{i}位" %></p>
+        <div class="card">
+          <%= link_to song_path(view.id) do %>
+            <%= image_tag view.image.to_s, size: '280x180' %>
+            <div class="card-body">
+              <h4 class="card-title"><%= view.name %></h4>
+            </div>
+          <% end %>
         </div>
       </div>
     <% end %>
