--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -264,7 +264,7 @@ footer .menu li a:hover{
 .sign_image{
   height:900px;
   margin-top:-5px;
-  background-image: url(speakers.jpg);
+  background-image: image-url("speakers.jpg");
   background-size: 100% auto;
   padding-top:50px;
 }
