Fix Layout Follow & Community

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -89,3 +89,13 @@ ul {
 .bottom_field{
   margin-top:20px;
 }
+
+.follow_name{
+  margin-top:20px;
+  font-size:20px;
+}
+
+.follow_introduction{
+  margin-top:20px;
+  font-size:20px;
+}
