--- a/app/views/users/followed.html.erb
+++ b/app/views/users/followed.html.erb
@@ -1,8 +1,15 @@
 <div class = "container">
-	<h1>フォロワー一覧</h1>
-	<% @follows.each do |followed| %>
-		<%= attachment_image_tag followed, :profile_image, :fill, 60, 60, fallback: "no_image.jpg",size: '60x60' %>
-		<strong><%= link_to followed.name, user_path(followed.id) %></strong>
-		<%= followed.introduction %>
+  <h1>フォロワー一覧</h1>
+    <div class = "row">
+    <% @follows.each do |followed| %>
+      <div class = "col-md-2">
+      	<%= attachment_image_tag followed, :profile_image, :fill, 80, 80, fallback: "no_image.jpg",size: '80x80' %>
+      </div>
+      <div class = "col-md-3 follow_name">
+        <p><strong><%= link_to followed.name, user_path(followed.id) %></strong></p>
+      </div>
+      <div class = "col-md-7 follow_introduction">
+        <%= followed.introduction %>
+      </div>
 	<% end %>
 </div>
