Fix Layout Follow

--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -53,7 +53,7 @@
               <%= attachment_image_tag member, :profile_image, :fill, 80, 80, fallback: "no_image.jpg",size: '80x80' %>
             </div>
             <div class = "col-md-9 post_text">
-              <p class = "member_name"><%= member.name %></p>
+              <p class = "member_name"><%= member.name %></p><br>
             </div>
           <% end %>
         </div>
