--- a/app/assets/stylesheets/communities.scss
+++ b/app/assets/stylesheets/communities.scss
@@ -19,13 +19,8 @@ ul {
   margin-left:180px;
 }
 
-.community-title{
-  display:inline-block;
-}
-
 .community_button{
-  display:inline-block;
-  margin-left:250px;
+  margin-top:20px;
 }
 
 .community-index{
@@ -34,9 +29,7 @@ ul {
 }
 
 .community-field{
-  display:inline-block;
-  margin-top:10px;
-  margin-left:10px;
+  margin-top:30px;
   font-size:18px;
 }
 
@@ -57,30 +50,19 @@ ul {
 }
 
 .member_box{
-  margin-bottom:10px;
+  margin:10px;
   dispaly:inline-block;
   margin-left:20px;
 }
 .member_field{
   margin-top:40px;
   margin-left:20px;
-  box-shadow: 0px 0px 8px gray;
   width:750px;
-}
-.member_name{
-  display:inline-block;
-  margin-left:10px;
-  margin-top:20px;
-}
-
-.com_comment_form{
-  margin-top:10px;
 }
 
 .community_song{
   margin-top:60px;
   margin-left:20px;
-  box-shadow: 0px 0px 8px gray;
   width:750px;
 }
 
@@ -100,12 +82,11 @@ ul {
 }
 
 .post_index{
-  margin-bottom:15px;
-  margin-left:20px;
+  margin:20px;
 }
 
 .post_text{
-  margin-top:10px;
+  margin-top:20px;
 }
 
 
@@ -124,5 +105,9 @@ margin-left:-150px;
 }
 
 .member_image{
-  margin-left:-20px;
+  margin-left:-50px;
+}
+
+.member_name{
+  font-size:18px;
 }
