--- a/app/assets/stylesheets/community_comments.scss
+++ b/app/assets/stylesheets/community_comments.scss
@@ -2,15 +2,16 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.com_comment_form{
-  margin-left:60px;
+.comment_form{
 }
 
 .comment_form{
+  margin-top:20px;
+  padding-bottom:60px;
   display:inline-block;
   position: absolute;
   margin-left:30px;
-  margin-top:-50px;
+  margin-bottom:30px;
 }
 
 .actions{
@@ -18,12 +19,10 @@
 }
 
 .community_comments{
-  height:350px;
+  height:600px;
   width:750px;
-  max-width:900px;
   margin-top:40px;
   margin-left:30px;
-  box-shadow: 0px 0px 8px gray;
 }
 
 .comment_title{
@@ -65,4 +64,12 @@ textarea{
 .comment_image{
   margin-top:10px;
   margin-left:-50px;
+}
+
+.comment_name{
+  font-size:18px;
+}
+
+.comment_text{
+  margin-top:10px;
 }
