--- a/app/assets/stylesheets/songs.scss
+++ b/app/assets/stylesheets/songs.scss
@@ -119,9 +119,10 @@ ul {
 }
 
 .infinite-list{
-  max-height:300px;
+  max-height:450px;
   max-width:700px;
-  overflow: scroll;
+  overflow:scroll;
+  box-shadow: 0px 0px 8px gray;
 }
 
 .ranking_title{
