--- a/app/assets/stylesheets/songs.scss
+++ b/app/assets/stylesheets/songs.scss
@@ -153,7 +153,7 @@ margin-bottom:-10px;
   background: -webkit-linear-gradient(#ffb03c, #ff708d);
   background: linear-gradient(to right, #ffb03c, #ff708d);
   color: #FFF;
-  margin-top:40px;
+  margin-bottom:40px;
 }
 
 .index_song{
