--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,7 @@
   </head>
 
   <body>
-    <div class="flash-field">
-    </div>
+    <div class="flash-field"></div>
 
     <%= render 'share/flash_messages.html' %>
 
