--- a/app/views/share/_footer.html.erb
+++ b/app/views/share/_footer.html.erb
@@ -11,9 +11,7 @@
 <footer>
   <div class="container">
     <div class="row text-center">
-      <div class="col-md-6 col-sm-6 col-xs-12">
-      </div>
-
+      <div class="col-md-6 col-sm-6 col-xs-12"></div>
       <div class="col-md-6 col-sm-6 col-xs-12">
         <ul class="menu list-inline">
           <% if user_signed_in? %>
