--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -36,9 +36,9 @@
           </div>
           <div class = "apple_field">
             <h3>Apple Music</h3>
-            <p>アーティストのリンクは<%= link_to 'こちら', @artist %></p>
+            <p>アーティストのリンクは<%= link_to 'こちら', @artist, target: :_blank %></p>
             <%= f.hidden_field :track_url, :value => @artist %>
-            <p>楽曲のリンクは<%= link_to 'こちら', @track %>へ</p>
+            <p>楽曲のリンクは<%= link_to 'こちら', @track, target: :_blank %>へ</p>
             <%= f.hidden_field :artist_url, :value => @track %>
           </div>
         </div>
