--- a/app/views/songs/search_results.html.erb
+++ b/app/views/songs/search_results.html.erb
@@ -10,7 +10,7 @@
   <% end %>
   <hr class="my-4">
   <% @songs.each do |song| %>
-    <div class="row">
+    <div class="row search_index">
       <div class="col-md-7 col-md-offset-2">
         <div class="row">
           <%= link_to song_path(song.id) do %>
