--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -65,11 +65,11 @@
   <div class = "community_comments">
   	<h2>コメント一覧</h2>
     <div id = "comments_area" class = "infinite-list jscroll">
-<!-- 投稿されたコメント一覧を曲詳細ページに表示するためのrender -->
+<#% 投稿されたコメント一覧を曲詳細ページに表示するためのrender %>
       <%= render partial: 'community_comments/index', locals: { community_comments: @comments } %>
     </div>
     <% if user_signed_in? %>
-<!-- コメント入力欄を曲詳細ページに表示するためのrender -->
+<#% コメント入力欄を曲詳細ページに表示するためのrender %>
       <%= render partial: 'community_comments/form', locals: { comment: @comment, community: @community } %>
     <% end %>
   </div>
